# bmstu-oop-4th-sem

./: .gitignore  README.md
lab_01/: .gitignore  CMakeLists.txt  Readme.md
lab_01/include/: alloc.h  alloc.inl  backup.h  def.h  draw.h  edges.h  errors.h  events.h  figure.h  io.h  mainwindow.h  points.h  requests.h
lab_01/model/: model.csv  model.csv_backup.csv  model2.csv_backup.csv  model3.csv  model_saved.csv  model_saved2.csv
lab_01/src/: alloc.cpp  backup.cpp  draw.cpp  edges.cpp  errors.cpp  events.cpp  figure.cpp  io.cpp  main.cpp  mainwindow.cpp  points.cpp  requests.cpp
lab_01/ui/: mainwindow.ui
lab_02/: CMakeLists.txt
lab_02/src/: main.cpp
lab_02/src/set/: container.cpp  container.h  errors.h  set.h  set.hpp
lab_02/src/set/iter/: setIter.h  setIter.hpp
lab_02/src/set/node/: set_node.h  set_node.hpp
lab_02/src/tests/: tests.h  tests.hpp
lab_03/: CMakeLists.txt  lab_03  main.cpp
lab_03/design/: mainwindow.ui  mainwindowcp.ui  mwindow.ui
lab_03/meta/.svn/: wc.db
lab_03/src/command/: command.h  facade.cpp  facade.h
lab_03/src/drawer/: drawer.cpp  drawer.h  factory.cpp  factory.h  mainwindow.cpp  mainwindow.h
lab_03/src/exceptions/: baseException.h  containerException.h  defException.h  drawException.h  loadException.h  sceneException.h
lab_03/src/figure/: edge.cpp  edge.h  figure.cpp  figure.h  point.cpp  point.h
lab_03/src/loader/: baseLoader.h  baseModelBuilder.h  builderFactory.cpp  builderFactory.h  fileLoader.cpp  fileLoader.h  loadDirector.cpp  loadDirector.h  loadManager.cpp  loadManager.h  loader.h  modelBuilder.cpp  modelBuilder.h  modelLoader.cpp  modelLoader.h
lab_03/src/managers/: baseManager.h  cameraManager.cpp  cameraManager.h  drawManager.cpp  drawManager.h  sceneManager.cpp  sceneManager.h  transformManager.cpp  transformManager.h  visitor.h
lab_03/src/objects/: camera.cpp  camera.h  composite.cpp  composite.h  invisibleObject.h  model.cpp  model.h  object.h  scene.cpp  scene.h  visibleObject.h
lab_03/src/vector/: iterator.h  iterator.hpp  vector.h  vector.hpp
lab_03/ttt/lab_03/.svn/: wc.db
lab_03/ttt/lab_03/src/gui/: mainwindow.cpp
lab_03/uml/: Untitled.mdj  uml.mdj
lab_04/: CMakeLists.txt
lab_04/.svn/: wc.db
lab_04/build2/: CMakeCache.txt  cmake_install.cmake  lab_04
lab_04/build2/.qt/: QtDeploySupport.cmake
lab_04/build2/lab_04_autogen/: mocs_compilation.cpp
lab_04/src/: constants.h  main.cpp
lab_04/src/cabin/: cabin.cpp  cabin.h
lab_04/src/control_panel/: controlpanel.cpp  controlpanel.h
lab_04/src/doors/: doors.cpp  doors.h
lab_04/src/gui/: mainwindow.cpp  mainwindow.h
lab_04/src/lift/: lift.cpp  lift.h
lab_05/: lab05.drawio
